--- a/OnlineExam/Views/Batch/Create.cshtml
+++ b/OnlineExam/Views/Batch/Create.cshtml
@@ -54,7 +54,7 @@
                         </div>
 
 
-                        @if (Model.Subjects.Count > 0)
+                        @if (Model.Subjects!=null && Model.Subjects.Count > 0)
                         {
                             <div class="col-md-12 col-sm-12 col-xs-12 itemHead">
                                 <b>Permitted Subjects</b>
