--- a/OnlineExam/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineExam/Views/Shared/_AdminLayout.cshtml
@@ -265,7 +265,7 @@
     hasValue = urlString.substr(0, urlString.indexOf("/Edit"));
     }
     if (hasValue.length < 1) {
-    hasValue = urlString.substr(0, urlString.indexOf("/View"));
+    hasValue = urlString.substr(0, urlString.indexOf("/Details"));
     }
     if (hasValue.length < 1) {
     hasValue = urlString.substr(0, urlString.indexOf("?"));
